--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ alabaster==1.0.0
     # via sphinx
 attrs==25.3.0
     # via
-    #   -c requirements.txt
+    # -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
 babel==2.17.0
     # via sphinx
@@ -16,7 +16,7 @@ backports-tarfile==1.2.0
     # via jaraco-context
 black==25.1.0
     # via
-    #   -c requirements.txt
+    # -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
 build==1.2.2.post1
     # via pip-tools
@@ -24,11 +24,11 @@ bump2version==1.0.1
     # via bumpversion
 bumpversion==0.6.0
     # via -r requirements-dev.in
-cachetools==6.0.0
+cachetools==6.1.0
     # via tox
-certifi==2025.4.26
+certifi==2025.7.14
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
 cffi==1.17.1
     # via cryptography
@@ -36,20 +36,20 @@ chardet==5.2.0
     # via tox
 charset-normalizer==3.4.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
 click==8.2.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   pip-tools
 colorama==0.4.6
     # via tox
-coverage[toml]==7.8.2
+coverage[toml]==7.9.2
     # via
     #   -r requirements-dev.in
     #   pytest-cov
-cryptography==45.0.4
+cryptography==45.0.5
     # via secretstorage
 distlib==0.3.9
     # via virtualenv
@@ -64,11 +64,11 @@ filelock==3.18.0
     # via
     #   tox
     #   virtualenv
-flake8==7.2.0
+flake8==7.3.0
     # via -r requirements-dev.in
 idna==3.10
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
 imagesize==1.4.1
     # via sphinx
@@ -76,7 +76,7 @@ importlib-metadata==8.7.0
     # via keyring
 iniconfig==2.1.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
 isort==6.0.1
     # via -r requirements-dev.in
@@ -84,7 +84,7 @@ jaraco-classes==3.4.0
     # via keyring
 jaraco-context==6.0.1
     # via keyring
-jaraco-functools==4.1.0
+jaraco-functools==4.2.1
     # via keyring
 jeepney==0.9.0
     # via
@@ -108,13 +108,13 @@ more-itertools==10.7.0
     #   jaraco-functools
 mypy-extensions==1.1.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
 nh3==0.2.21
     # via readme-renderer
 packaging==23.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   build
     #   pyproject-api
@@ -124,7 +124,7 @@ packaging==23.2
     #   twine
 pathspec==0.12.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
 pip-tools==7.4.1
     # via -r requirements-dev.in
@@ -132,35 +132,36 @@ pkginfo==1.12.1.2
     # via twine
 platformdirs==4.3.8
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   tox
     #   virtualenv
 pluggy==1.6.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
+    #   pytest-cov
     #   tox
 py==1.11.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
-pycodestyle==2.13.0
+pycodestyle==2.14.0
     # via flake8
 pycparser==2.22
     # via cffi
-pyflakes==3.3.2
+pyflakes==3.4.0
     # via flake8
-pygments==2.19.1
+pygments==2.19.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pygments-lexer-solidity
     #   readme-renderer
     #   rich
     #   sphinx
 pygments-lexer-solidity==0.7.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
 pyproject-api==1.6.1
     # via tox
@@ -170,10 +171,10 @@ pyproject-hooks==1.2.0
     #   pip-tools
 pytest==6.2.5
     # via
-    #   -c requirements.txt
+     #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest-cov
     #   pytest-mock
-pytest-cov==6.1.1
+pytest-cov==6.2.1
     # via -r requirements-dev.in
 pytest-mock==3.14.1
     # via -r requirements-dev.in
@@ -181,7 +182,7 @@ readme-renderer==44.0
     # via twine
 requests==2.32.4
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests-toolbelt
     #   sphinx
     #   twine
@@ -220,26 +221,26 @@ sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
 toml==0.10.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
 tox==4.15.1
     # via -r requirements-dev.in
 twine==6.0.1
     # via -r requirements-dev.in
-typing-extensions==4.14.0
+typing-extensions==4.14.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   eth-retry
-urllib3==2.4.0
+urllib3==2.5.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
     #   twine
 virtualenv==20.31.2
     # via tox
 wheel==0.45.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
     #   pip-tools
 zipp==3.23.0
