--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ alabaster==1.0.0
     # via sphinx
 attrs==25.3.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
 babel==2.17.0
     # via sphinx
@@ -16,7 +16,7 @@ backports-tarfile==1.2.0
     # via jaraco-context
 black==25.1.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
 build==1.2.2.post1
     # via pip-tools
@@ -28,7 +28,7 @@ cachetools==6.1.0
     # via tox
 certifi==2025.7.14
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
 cffi==1.17.1
     # via cryptography
@@ -36,11 +36,11 @@ chardet==5.2.0
     # via tox
 charset-normalizer==3.4.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
 click==8.2.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   pip-tools
 colorama==0.4.6
@@ -51,7 +51,7 @@ coverage[toml]==7.9.2
     #   pytest-cov
 cryptography==45.0.5
     # via secretstorage
-distlib==0.3.9
+distlib==0.4.0
     # via virtualenv
 docutils==0.21.2
     # via
@@ -68,7 +68,7 @@ flake8==7.3.0
     # via -r requirements-dev.in
 idna==3.10
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
 imagesize==1.4.1
     # via sphinx
@@ -76,7 +76,7 @@ importlib-metadata==8.7.0
     # via keyring
 iniconfig==2.1.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
 isort==6.0.1
     # via -r requirements-dev.in
@@ -108,13 +108,13 @@ more-itertools==10.7.0
     #   jaraco-functools
 mypy-extensions==1.1.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
-nh3==0.2.22
+nh3==0.3.0
     # via readme-renderer
 packaging==23.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   build
     #   pyproject-api
@@ -124,7 +124,7 @@ packaging==23.2
     #   twine
 pathspec==0.12.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
 pip-tools==7.4.1
     # via -r requirements-dev.in
@@ -132,19 +132,19 @@ pkginfo==1.12.1.2
     # via twine
 platformdirs==4.3.8
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   black
     #   tox
     #   virtualenv
 pluggy==1.6.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
     #   pytest-cov
     #   tox
 py==1.11.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
 pycodestyle==2.14.0
     # via flake8
@@ -154,14 +154,14 @@ pyflakes==3.4.0
     # via flake8
 pygments==2.19.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pygments-lexer-solidity
     #   readme-renderer
     #   rich
     #   sphinx
 pygments-lexer-solidity==0.7.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
 pyproject-api==1.6.1
     # via tox
@@ -171,7 +171,7 @@ pyproject-hooks==1.2.0
     #   pip-tools
 pytest==6.2.5
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest-cov
     #   pytest-mock
 pytest-cov==6.2.1
@@ -182,7 +182,7 @@ readme-renderer==44.0
     # via twine
 requests==2.32.4
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests-toolbelt
     #   sphinx
     #   twine
@@ -221,7 +221,7 @@ sphinxcontrib-serializinghtml==2.0.0
     # via sphinx
 toml==0.10.2
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   pytest
 tox==4.15.1
     # via -r requirements-dev.in
@@ -229,18 +229,18 @@ twine==6.0.1
     # via -r requirements-dev.in
 typing-extensions==4.14.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   eth-retry
 urllib3==2.5.0
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   requests
     #   twine
 virtualenv==20.31.2
     # via tox
 wheel==0.45.1
     # via
-    #   -c requirements.txt
+    #   -c /home/runner/work/brownie/brownie/requirements.txt
     #   -r requirements-dev.in
     #   pip-tools
 zipp==3.23.0
