--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -36,6 +36,9 @@ jobs:
     - name: Run Pip Compile
       run: pip-compile -U
 
+    - name: Run Pip Compile for Windows
+      run: pip-compile -U requirements-windows.in
+
     - name: Run Pip Compile for Dev Deps
       run: pip-compile -U requirements-dev.in
     
