--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires = [
     "mypy[mypyc]==1.17.0",
     "types-pyyaml",
     "types-requests",
+    "eth-event>=1.3.5,<1.4",
     "eth-typing==4.4.0",
 ]
 
