--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ passenv =
 deps =
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: coverage==5.2.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: eth-retry==0.3.4
+    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: eth-typing==4.4.0
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest==6.0.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-cov==2.10.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-mock==3.3.1
