feat: steps for workflow to pass checks from fork or base

--- a/.github/workflows/pip-compile.yaml
+++ b/.github/workflows/pip-compile.yaml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches:
       - master
+
+permissions:
+  contents: write        # allow committing back to a branch
+  pull-requests: write   # needed if you later switch to create-pull-request
       
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -14,8 +18,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    # ───────────── branch lives in a *fork* ─────────────
+    - name: Checkout fork branch
+      if: github.event_name == 'pull_request'
       uses: actions/checkout@v4
+      with:
+        repository: ${{ github.event.pull_request.head.repo.full_name }}
+        ref:        ${{ github.event.pull_request.head.ref }}
+        fetch-depth: 0        # full history for black-isort, etc.
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+      # ───────────── branch lives in the *main repo* ─────
+    - name: Checkout repo branch / push event
+      if: github.event_name != 'pull_request'
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -48,15 +66,17 @@ jobs:
     - name: Compile
       run: pip install .
 
-    - name: Check for changes
-      id: changes
+    - name: Commit & push changes
+      if: env.changes_detected == 'true' &&
+          ( github.event_name == 'push' ||
+            github.event.pull_request.head.repo.full_name == github.repository )
       run: |
-        if [[ -n $(git status --porcelain) ]]; then
-          echo "changes_detected=true" >> $GITHUB_ENV
-        else
-          echo "changes_detected=false" >> $GITHUB_ENV
-        fi
-
+        git config --local user.name  "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git commit -m "chore: auto-format & update lockfiles"
+        git push
+        
     - name: Commit changes
       if: env.changes_detected == 'true'
       run: |
