--- a/requirements.txt
+++ b/requirements.txt
@@ -31,9 +31,10 @@ cchecksum==0.3.1
     # via
     #   -r requirements.in
     #   eth-event
+    #   faster-eth-abi
 certifi==2025.8.3
     # via requests
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
     # via requests
 ckzg==2.1.1
     # via eth-account
@@ -49,17 +50,15 @@ eip712==0.2.13
     # via -r requirements.in
 eth-abi==5.2.0
     # via
-    #   -r requirements.in
     #   eip712
     #   eth-account
-    #   eth-event
     #   web3
 eth-account==0.13.7
     # via
     #   -r requirements.in
     #   eip712
     #   web3
-eth-event==1.3.5
+eth-event==1.4.0
     # via -r requirements.in
 eth-hash[pycryptodome]==0.7.1
     # via
@@ -84,6 +83,7 @@ eth-typing==4.4.0
     #   eth-abi
     #   eth-keys
     #   eth-utils
+    #   faster-eth-abi
     #   faster-eth-utils
     #   web3
 eth-utils==4.1.1
@@ -98,8 +98,14 @@ eth-utils==4.1.1
     #   web3
 execnet==2.1.1
     # via pytest-xdist
-faster-eth-utils==4.1.4
-    # via -r requirements.in
+faster-eth-abi==5.2.4
+    # via
+    #   -r requirements.in
+    #   eth-event
+faster-eth-utils==4.1.5
+    # via
+    #   -r requirements.in
+    #   faster-eth-abi
 frozenlist==1.7.0
     # via
     #   aiohttp
@@ -137,7 +143,9 @@ multidict==6.6.3
     #   aiohttp
     #   yarl
 mypy-extensions==1.1.0
-    # via black
+    # via
+    #   black
+    #   faster-eth-abi
 packaging==23.2
     # via
     #   black
@@ -145,7 +153,9 @@ packaging==23.2
     #   vvm
     #   vyper
 parsimonious==0.10.0
-    # via eth-abi
+    # via
+    #   eth-abi
+    #   faster-eth-abi
 pathspec==0.12.1
     # via black
 platformdirs==4.3.8
