--- a/requirements-windows.txt
+++ b/requirements-windows.txt
@@ -32,7 +32,7 @@ attrs==25.3.0
     #   jsonschema
     #   pytest
     #   referencing
-bitarray==3.6.0
+bitarray==3.6.1
     # via
     #   -r requirements.txt
     #   eth-account
@@ -46,11 +46,12 @@ cchecksum==0.3.1
     # via
     #   -r requirements.txt
     #   eth-event
+    #   faster-eth-abi
 certifi==2025.8.3
     # via
     #   -r requirements.txt
     #   requests
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
     # via
     #   -r requirements.txt
     #   requests
@@ -80,14 +81,13 @@ eth-abi==5.2.0
     #   -r requirements.txt
     #   eip712
     #   eth-account
-    #   eth-event
     #   web3
 eth-account==0.13.7
     # via
     #   -r requirements.txt
     #   eip712
     #   web3
-eth-event==1.3.5
+eth-event==1.4.0
     # via -r requirements.txt
 eth-hash[pycryptodome]==0.7.1
     # via
@@ -117,6 +117,7 @@ eth-typing==4.4.0
     #   eth-abi
     #   eth-keys
     #   eth-utils
+    #   faster-eth-abi
     #   faster-eth-utils
     #   web3
 eth-utils==4.1.1
@@ -134,8 +135,14 @@ execnet==2.1.1
     # via
     #   -r requirements.txt
     #   pytest-xdist
-faster-eth-utils==4.1.4
-    # via -r requirements.txt
+faster-eth-abi==5.2.5
+    # via
+    #   -r requirements.txt
+    #   eth-event
+faster-eth-utils==4.1.5
+    # via
+    #   -r requirements.txt
+    #   faster-eth-abi
 frozenlist==1.7.0
     # via
     #   -r requirements.txt
@@ -182,7 +189,7 @@ lru-dict==1.3.0
     # via
     #   -r requirements.txt
     #   web3
-multidict==6.6.3
+multidict==6.6.4
     # via
     #   -r requirements.txt
     #   aiohttp
@@ -191,6 +198,7 @@ mypy-extensions==1.1.0
     # via
     #   -r requirements.txt
     #   black
+    #   faster-eth-abi
 packaging==23.2
     # via
     #   -r requirements.txt
@@ -202,6 +210,7 @@ parsimonious==0.10.0
     # via
     #   -r requirements.txt
     #   eth-abi
+    #   faster-eth-abi
 pathspec==0.12.1
     # via
     #   -r requirements.txt
@@ -362,7 +371,7 @@ wheel==0.45.1
     # via
     #   -r requirements.txt
     #   vyper
-wrapt==1.17.2
+wrapt==1.17.3
     # via -r requirements.txt
 yarl==1.20.1
     # via
