--- a/requirements.in
+++ b/requirements.in
@@ -2,12 +2,12 @@ black>=20.8b1
 cchecksum>=0.1.0
 eip712
 eth-account
-eth-event>=1.3.4,<2
+eth-event>=1.4.3,<2
 eth-hash[pycryptodome]
 eth-typing>=4.2.1,<5
 faster-eth-abi
 faster-eth-utils>=4.1.2
-hexbytes
+faster-hexbytes>=1.3.2,<2
 hypothesis<6.28.0
 lazy-object-proxy>=1.6.0,<2
 prompt-toolkit<4
