--- a/requirements.txt
+++ b/requirements.txt
@@ -107,14 +107,15 @@ faster-eth-utils==4.1.7
     #   -r requirements.in
     #   faster-eth-abi
 faster-hexbytes==1.3.2
-    # via eth-event
+    # via
+    #   -r requirements.in
+    #   eth-event
 frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
 hexbytes==1.3.1
     # via
-    #   -r requirements.in
     #   eip712
     #   eth-account
     #   eth-rlp
