--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ cchecksum==0.3.1
     #   -r requirements.in
     #   eth-event
     #   faster-eth-abi
-certifi==2025.8.3
+certifi==2025.10.5
     # via requests
 charset-normalizer==3.4.3
     # via requests
@@ -107,14 +107,15 @@ faster-eth-utils==4.1.7
     #   -r requirements.in
     #   faster-eth-abi
 faster-hexbytes==1.3.2
-    # via eth-event
+    # via
+    #   -r requirements.in
+    #   eth-event
 frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
 hexbytes==1.3.1
     # via
-    #   -r requirements.in
     #   eip712
     #   eth-account
     #   eth-rlp
@@ -280,5 +281,5 @@ wheel==0.45.1
     # via vyper
 wrapt==1.17.3
     # via -r requirements.in
-yarl==1.20.1
+yarl==1.21.0
     # via aiohttp
