--- a/tox.ini
+++ b/tox.ini
@@ -23,13 +23,13 @@ deps =
     docs-{local,external}: sphinx_rtd_theme
     docs-{local,external}: pygments_lexer_solidity
 commands =
-    py{310,311,312}: python pytest_patched.py /tests {posargs} -s -vv
-    evm-byzantium: python pytest_patched.py /tests --evm 0.4.22,0.4.26,0.5.0,0.5.17,0.6.3,0.6.9 byzantium 0,10000 -v
-    evm-petersburg: python pytest_patched.py /tests --evm 0.5.5,0.5.17,0.6.3,0.6.9 petersburg 0,10000 -v
-    evm-istanbul: python pytest_patched.py /tests --evm 0.5.13,0.5.17,0.6.3,0.6.9 istanbul 0,10000 -v
-    evm-latest: python pytest_patched.py /tests --evm latest byzantium,petersburg,istanbul 0,200,10000 -v
-    pmtest: python pytest_patched.py /tests --target pm -n 0 -v
-    plugintest: python pytest_patched.py /tests/test/plugin --target plugin -n 0 -v
+    py{310,311,312}: python pytest_patched.py tests/ {posargs} -s -vv
+    evm-byzantium: python pytest_patched.py tests/ --evm 0.4.22,0.4.26,0.5.0,0.5.17,0.6.3,0.6.9 byzantium 0,10000 -v
+    evm-petersburg: python pytest_patched.py tests/ --evm 0.5.5,0.5.17,0.6.3,0.6.9 petersburg 0,10000 -v
+    evm-istanbul: python pytest_patched.py tests/ --evm 0.5.13,0.5.17,0.6.3,0.6.9 istanbul 0,10000 -v
+    evm-latest: python pytest_patched.py tests/ --evm latest byzantium,petersburg,istanbul 0,200,10000 -v
+    pmtest: python pytest_patched.py tests/ --target pm -n 0 -v
+    plugintest: python pytest_patched.py tests/test/plugin --target plugin -n 0 -v
     docs-local: sphinx-build {posargs:-E} -b html docs dist/docs -n -q --color
     docs-external: sphinx-build -b linkcheck docs dist/docs -n -q --color
 
