--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -85,6 +85,16 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: pip
+          cache-dependency-path: |
+            pyproject.toml
+            setup.py
+            requirements.in
+            requirements.txt
+            requirements-windows.in
+            requirements-windows.txt
+            requirements-dev.in
+            requirements-dev.txt
 
       - name: Install Tox
         run: pip install tox
