--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     lint
     docs-{local,external}
-    py{310,311,312}
+    py{310,311,312,313,314,314t}
     {pm,evm,plugin}test
     evm-{byzantium,petersburg,istanbul,latest}
 
@@ -12,18 +12,18 @@ passenv =
     GITHUB_TOKEN
     WEB3_INFURA_PROJECT_ID
 deps =
-    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: coverage==5.2.1
-    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: eth-retry==0.3.4
-    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest==6.0.1
-    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-cov==2.10.1
-    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-mock==3.3.1
-    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-xdist==1.34.0
+    py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: coverage==5.2.1
+    py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: eth-retry==0.3.4
+    py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest==6.0.1
+    py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-cov==2.10.1
+    py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-mock==3.3.1
+    py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-xdist==1.34.0
     py{312}: setuptools==80.9.0
     docs-{local,external}: sphinx
     docs-{local,external}: sphinx_rtd_theme
     docs-{local,external}: pygments_lexer_solidity
 commands =
-    py{310,311,312}: python pytest_patched.py tests/ {posargs} -s -vv
+    py{310,311,312,313,314,314t}: python pytest_patched.py tests/ {posargs} -s -vv
     evm-byzantium: python pytest_patched.py tests/ --evm 0.4.22,0.4.26,0.5.0,0.5.17,0.6.3,0.6.9 byzantium 0,10000 -v
     evm-petersburg: python pytest_patched.py tests/ --evm 0.5.5,0.5.17,0.6.3,0.6.9 petersburg 0,10000 -v
     evm-istanbul: python pytest_patched.py tests/ --evm 0.5.13,0.5.17,0.6.3,0.6.9 istanbul 0,10000 -v
