--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires = [
     "types-requests",
     "types-ujson",
     "eth-event>=1.4.3,<2",
-    "eth-typing==4.4.0",
+    "eth-typing>4.4.0,<6",
 ]
 
 
