fix(test): temporarily disable pytest-xdist
Our hacky fix for eth-typing testing issue works, but only on the original process

We have to disable pytest-xdist until we implement web3 v7 support

--- a/requirements.in
+++ b/requirements.in
@@ -17,7 +17,8 @@ py-solc-x>=1.1.0,<2
 py>=1.5.0,<2
 pygments-lexer-solidity<1
 pygments<3
-pytest-xdist<2
+# temporarily disabled until web3 v7 support
+# pytest-xdist<2
 pytest<7
 python-dotenv>=0.16.0,<0.17.0
 pyyaml>=6,<7
