--- a/tox.ini
+++ b/tox.ini
@@ -28,8 +28,8 @@ commands =
     evm-petersburg: python pytest_patched.py tests/ --evm 0.5.5,0.5.17,0.6.3,0.6.9 petersburg 0,10000 -v
     evm-istanbul: python pytest_patched.py tests/ --evm 0.5.13,0.5.17,0.6.3,0.6.9 istanbul 0,10000 -v
     evm-latest: python pytest_patched.py tests/ --evm latest byzantium,petersburg,istanbul 0,200,10000 -v
-    pmtest: python pytest_patched.py tests/ --target pm -n 0 -v
-    plugintest: python pytest_patched.py tests/test/plugin --target plugin -n 0 -v
+    pmtest: python pytest_patched.py tests/ --target pm -v
+    plugintest: python pytest_patched.py tests/test/plugin --target plugin -v
     docs-local: sphinx-build {posargs:-E} -b html docs dist/docs -n -q --color
     docs-external: sphinx-build -b linkcheck docs dist/docs -n -q --color
 
