--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest==6.0.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-cov==2.10.1
     py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-mock==3.3.1
-    ;py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-xdist==1.34.0
+    py{310,311,312},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-xdist==1.34.0
     py{312}: setuptools==80.9.0
     docs-{local,external}: sphinx
     docs-{local,external}: sphinx_rtd_theme
