--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -102,7 +102,10 @@ jobs:
         run: pip install tox
 
       - name: Run Tox
-        run: tox -e py${{ matrix.python-version }} --showconfig
+        run: |
+          toxenv="py${{ matrix.python-version }}"
+          toxenv="${toxenv//./}
+          tox -e "$toxenv" --showconfig
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
