--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -105,7 +105,7 @@ jobs:
         run: |
           toxenv="py${{ matrix.python-version }}"
           toxenv="${toxenv//./}"
-          tox -e "$toxenv" --showconfig
+          tox -e "$toxenv"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
