--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -102,6 +102,7 @@ jobs:
         run: pip install tox
 
       - name: Run Tox
+        shell: bash
         run: |
           toxenv="py${{ matrix.python-version }}"
           toxenv="${toxenv//./}"
