--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
     py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-cov==2.10.1
     py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-mock==3.3.1
     py{310,311,312,313,314,314t},{pm,plugin}test,evm-{byzantium,petersburg,istanbul,latest}: pytest-xdist==1.34.0
-    py{312}: setuptools==80.9.0
+    py{312,313,314,314t}: setuptools==80.9.0
     docs-{local,external}: sphinx
     docs-{local,external}: sphinx_rtd_theme
     docs-{local,external}: pygments_lexer_solidity
