--- a/requirements.in
+++ b/requirements.in
@@ -8,6 +8,7 @@ eth-typing>=4.2.1,<6
 faster-eth-abi
 faster-eth-utils>=4.1.2
 faster-hexbytes>=1.3.2,<2
+faster-web3>=6,<7
 hypothesis<6.28.0
 lazy-object-proxy>=1.6.0,<2
 prompt-toolkit<4
@@ -28,5 +29,4 @@ tqdm<5
 ujson
 vvm==0.2.1
 vyper>=0.4.0,<0.5
-web3>=6,<7
 wrapt>=1.12.1,<2
