--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -1,6 +1,8 @@
 name: Core Ganache
 on:
   push:
+    branches:
+      - master
     paths:
       - '**.py'
       - '.github/workflows/core-ganache.yaml'
