--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,8 @@
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 name: linting
 
@@ -29,10 +33,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup Python 3.10
+    - name: Setup Python 3.13
       uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.13"
 
     - name: Install Tox
       run: pip install tox
