--- a/.github/workflows/evm.yaml
+++ b/.github/workflows/evm.yaml
@@ -1,4 +1,8 @@
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 name: evm tests
 
@@ -29,8 +33,8 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          ~/.solcx
-          ~/.vvm
+          ${{ env.HOME }}/.solcx
+          ${{ env.HOME }}/.vvm
         key: ${{ runner.os }}-compiler-cache
 
     - name: Setup Node.js
