--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -57,9 +57,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.solcx
-            ~/.vvm
+            ${{ env.HOME }}/.solcx
+            ${{ env.HOME }}/.vvm
           key: ${{ runner.os }}-compiler-cache
+          save-always: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
