--- a/.github/workflows/functionality.yaml
+++ b/.github/workflows/functionality.yaml
@@ -1,4 +1,8 @@
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 name: functionality
 
@@ -29,8 +33,8 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          ~/.solcx
-          ~/.vvm
+          ${{ env.HOME }}/.solcx
+          ${{ env.HOME }}/.vvm
         key: ${{ runner.os }}-compiler-cache
 
     - name: Setup Node.js
@@ -39,10 +43,10 @@ jobs:
     - name: Install Ganache
       run: npm install -g ganache@7.9.2
 
-    - name: Setup Python 3.10
+    - name: Setup Python 3.12
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: "3.12"
 
     - name: Install Tox
       run: pip install tox
