--- a/.github/workflows/evm.yaml
+++ b/.github/workflows/evm.yaml
@@ -33,8 +33,8 @@ jobs:
       uses: actions/cache@v4
       with:
         path: |
-          ${{ env.HOME }}/.solcx
-          ${{ env.HOME }}/.vvm
+          ~/.solcx
+          ~/.vvm
         key: ${{ runner.os }}-compiler-cache
 
     - name: Setup Node.js
