--- a/.github/workflows/functionality.yaml
+++ b/.github/workflows/functionality.yaml
@@ -3,6 +3,9 @@ on:
     branches:
       - master
   pull_request:
+  schedule:
+    - cron: '0 18 * * *'  # Daily 1800 UTC
+  workflow_dispatch:
 
 name: functionality
 
