--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -51,17 +51,17 @@ jobs:
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.14", "3.14t"]
         include:
           - python-version: "3.10"
-            infura-key: 0x123
+            infura-key: ddddf0c53f254d36aa76ce4e3a6a390e
           - python-version: "3.11"
-            infura-key: 0x123
+            infura-key: 1668fecbc9c242d58253476103a42ce9
           - python-version: "3.12"
-            infura-key: 0x123
+            infura-key: 21317ddb5ded42ce8d40c7d78f90474f
           - python-version: "3.13"
-            infura-key: 0x123
+            infura-key: ddddf0c53f254d36aa76ce4e3a6a390e
           - python-version: "3.14"
-            infura-key: 0x123
-          - python-version: "3.15"
-            infura-key: 0x123
+            infura-key: 1668fecbc9c242d58253476103a42ce9
+          - python-version: "3.14t"
+            infura-key: 21317ddb5ded42ce8d40c7d78f90474f
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.infura-key }}
       cancel-in-progress: false
@@ -89,6 +89,7 @@ jobs:
           else
             npm install -g ganache@7.9.2
           fi
+        
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
