--- a/.github/workflows/core-ganache.yaml
+++ b/.github/workflows/core-ganache.yaml
@@ -45,6 +45,7 @@ jobs:
     name: Ganache Core (${{ matrix.python-version }} on ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
+      # we can increase concurrency beyond 6 but we will need more keys first
       max-parallel: 6
       fail-fast: false
       matrix:
