--- a/.github/workflows/evm.yaml
+++ b/.github/workflows/evm.yaml
@@ -63,6 +63,12 @@ jobs:
 
     - name: Install Tox
       run: pip install tox
+      
+    - name: Cache tox environment
+      uses: actions/cache@v4
+      with:
+        path: .tox
+        key: ${{ runner.os }}-${{ matrix.job }}-${{ matrix.python-version }}-${{ matrix.architecture }}-${{ hashFiles('pyproject.toml', 'setup.py', 'requirements.in', 'requirements.txt', 'requirements-windows.in', 'requirements-windows.txt', 'requirements-dev.in', 'requirements-dev.txt', 'tox.ini') }}
 
     - name: Run Tox
       run: tox -e ${{ matrix.job }}
